# OS_Lab4

./: README.md
OS_Lab4_Boost/: OS_Lab4_Boost.sln
OS_Lab4_Boost/OS_Lab4_Boost/: CMakeLists.txt  Common.h  OS_Lab4_Boost.vcxproj  OS_Lab4_Boost.vcxproj.filters  Receiver.cpp  Sender.cpp  tests.cpp
OS_Lab4_WinAPI/: OS_Lab4_WinAPI.sln
OS_Lab4_WinAPI/OS_Lab4_WinAPI/: CMakeLists.txt  Common.h  OS_Lab4_WinAPI.vcxproj  OS_Lab4_WinAPI.vcxproj.filters  Receiver.cpp  Sender.cpp  UnitTests.cpp
